--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-canvas-js": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.1.1",
+    "typeit": "^7.0.4",
+    "typeit-react": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
