--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-canvas-js": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -15,6 +16,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1",
+    "sweetalert": "^2.1.2",
     "typeit": "^7.0.4",
     "typeit-react": "^0.1.3"
   },
